# python_project_boilerplate.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg
tests/: tests.py
