[metadata]
name = python_project_boilerplate
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/python_project_boilerplate.py
description = 
long_description = file: ReadMe.md
keywords = python_project_boilerplate
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
install_requires =
	
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
